--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "eslint-config-uber-universal-stage-3": "^2.0.0"
+    "eslint-config-uber-universal-stage-3": "^3.0.0"
   },
   "peerDependencies": {
     "eslint-plugin-flowtype": "^2.36.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-jest": "^21.18.0"
+    "eslint-plugin-jest": "^21.18.0",
+    "eslint-plugin-react": "^7.4.0"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.6",
+    "babel-eslint": "10.0.1",
     "eslint": "5.6.1",
     "eslint-plugin-cup": "2.0.0",
     "eslint-plugin-flowtype": "2.50.3",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "^21.18.0",
-    "eslint-plugin-prettier": "2.6.2",
-    "eslint-plugin-react": "7.11.0",
-    "flow-bin": "0.78.0",
-    "prettier": "1.14.2"
+    "eslint-plugin-jest": "^21.24.1",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-react": "7.11.1",
+    "flow-bin": "0.82.0",
+    "prettier": "1.14.3"
   },
   "scripts": {
     "lint": "eslint .",
